# RustOS-v1

./: Cargo.toml  Makefile  README.md
src/: lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  linker.ld  long_mode_init.asm  multiboot_header.asm
src/memory/: Area_frame_allocator.rs  mod.rs
src/memory/paging/: entry.rs  mod.rs  table.rs
