[package]
name = "x86_64-blog_os"
version = "0.1.0"
authors = ["shawtao <1203405394@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
rlibc = "1.0"
volatile = "0.2.6"
spin = "0.9.0"
multiboot2 = "0.1.0"
bitflags = "0.9.1"
x86_64 = "0.14.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]